@@ -88,7 +88,7 @@ function panels_menu($may_cache) {
     while ($panels = db_fetch_object($result)) {
       $items[] = array(
         'path' => $panels->path,
-        'title' => $panels->title,
+        'title' => filter_xss_admin($panels->title),
         'access' => panels_access(unserialize($panels->access)),
         'callback' => 'panels_panels_page',
         'callback arguments' => array($panels->did),
@@ -711,6 +711,7 @@ function panels_panels_page($did) {
     watchdog('panels', t('Unable to find requested layout %s', array('%s' => check_plain($panels->layout))));
     return drupal_not_found();
   }
+  drupal_set_title(filter_xss_admin($panels->title));
 
   panels_is_panels_page(TRUE);
   $content_types = panels_get_content_types();
